--- a/hzau_yx.plist
+++ b/hzau_yx.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://yingxin.hzau.edu.cn/yx/app/yx103.ipa</string>
+					<string>http://yingxin.hzau.edu.cn:8080/yx/app/yx103.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
