--- a/hazugrid.plist
+++ b/hazugrid.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://211.69.132.92/grid/static/app/grid-release.ipa</string>
+					<string>http://grid.hzau.edu.cn/grid/static/app/grid-release.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
