--- a/jju.plist
+++ b/jju.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://m.jju.edu.cn/download/app.ipa</string>
+					<string>http://ydxy.jju.edu.cn/download/app.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
